[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scrips/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets Graphiques/Bouton/Jouer_blanc.png" type="Texture" id=2]
[ext_resource path="res://Assets Graphiques/Fond Menu/Titre.png" type="Texture" id=3]
[ext_resource path="res://Assets Graphiques/Bouton/Jouer_noir.png" type="Texture" id=4]
[ext_resource path="res://Assets Graphiques/Bouton/Quitter_noir.png" type="Texture" id=5]
[ext_resource path="res://Assets Graphiques/Bouton/Quitter_blanc.png" type="Texture" id=6]
[ext_resource path="res://Assets Graphiques/Fond Menu/Fond.png" type="Texture" id=7]
[ext_resource path="res://Assets Graphiques/Bouton/Credit_blanc.png" type="Texture" id=8]
[ext_resource path="res://Assets Graphiques/Bouton/Credit_noir.png" type="Texture" id=9]
[ext_resource path="res://Assets Graphiques/Ecran_noir.png" type="Texture" id=10]
[ext_resource path="res://Assets Graphiques/Fond Menu/Credit menu.png" type="Texture" id=11]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Fond" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 7 )

[node name="Titre" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 3 )

[node name="CreditMenu" type="Sprite" parent="."]
position = Vector2( 639.929, 360 )
texture = ExtResource( 11 )

[node name="Jouer" type="TextureButton" parent="."]
margin_left = 197.721
margin_top = 445.449
margin_right = 411.721
margin_bottom = 551.449
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitter" type="TextureButton" parent="."]
margin_left = 835.864
margin_top = 455.863
margin_right = 1062.86
margin_bottom = 542.863
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="TextureButton" parent="."]
margin_left = 552.614
margin_top = 586.384
margin_right = 736.614
margin_bottom = 652.384
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ecran noir" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 640, 360 )
texture = ExtResource( 10 )
[connection signal="button_up" from="Jouer" to="." method="_on_Jouer_button_up"]
[connection signal="button_up" from="Quitter" to="." method="_on_Quitter_button_up"]
[connection signal="button_up" from="Credit" to="." method="_on_Credit_button_up"]
